--- a/style.css
+++ b/style.css
@@ -1,27 +1,41 @@
 body {
-font-family: Arial, sans-serif;
-line-height: 1.6;
-margin: 0;
-padding: 0;
-background-color: #f4f4f9;
-color: #333;
-}
-h1 {
-background-color: #0078D7;
-color: white;
-padding: 10px;
-text-align: center;
-}
-ul{
-  padding: 15px;
-list-style-type: square;
+  font-family: Arial, sans-serif;
+  line-height: 1.6;
+  margin: 0;
+  padding: 0;
+  background-color: #f4f4f9;
+  color: #333;
 }
 
-li
-{
+h1 {
   background-color: #0078D7;
-color: white;
+  color: white;
+  padding: 10px;
+  text-align: center;
+}
+
+ul {
+  padding: 15px;
+  list-style-type: square;
+}
+
+li {
+  background-color: #0078D7;
+  color: white;
   text-align: center;
   padding: 10px;
   font-family: Arial, sans-serif;
+  cursor: pointer;
+}
+
+li:hover {
+  background-color: #005bb5;
+}
+
+#content {
+  margin: 20px;
+}
+
+.content-section {
+  display: none;
 }
