--- a/style.css
+++ b/style.css
@@ -44,8 +44,7 @@ li:hover {
   display: flex;
   flex-direction: column;
   align-items: center; /* Center content horizontally */
-  
-  gap: 10px; /* Add spacing between items */
+  gap: 20px; /* Add spacing between items */
   margin: 20px 0;
 }
 
@@ -54,7 +53,8 @@ li:hover {
 }
 
 .content-section {
-  display: none;
+  display: none; /* Hide all content sections initially */
   display: flex;
-  gap:10px; /* Add spacing between images */
+  justify-content: center; /* Center images horizontally */
+  gap: 20px; /* Add spacing between images */
 }
